--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "firebase": "^9.6.5",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
+    "qrcode": "^1.5.0",
     "sequelize": "^6.14.0",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0"
   }
 }
