--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pg-hstore": "^2.3.4",
     "qrcode": "^1.5.0",
     "sequelize": "^6.14.0",
+    "socket.io": "^4.4.1",
     "uuid": "^8.3.2",
     "validator": "^13.7.0"
   }
